fixed overflow of the video

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 *{
   box-sizing: border-box;
+  /* border: solid 5px red; */
 }
 body, html{
   height: 100%;
@@ -105,7 +106,7 @@ body, html{
   position: absolute;
   top: 0;
   left: 0;
-  width: 110%;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
 }
